# tree-sitter-latex

./: Cargo.toml  build.rs  package-lock.json  package.json
bindings/rust/: lib.rs
