[package]
name = "tree-sitter-latex"
description = "latex grammar for the tree-sitter parsing library"
version = "0.7.1"
keywords = ["incremental", "parsing", "latex"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/latex-lsp/tree-sitter-latex"
edition = "2018"
license = "MIT"
authors = ["Patrick Förster <patrick.foerster@outlook.de>"]
readme = "README.md"
autoexamples = false

build = "build.rs"
include = ["build.rs", "bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.26"
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"
tree-sitter-generate = "0.26"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_main"
path = "benches/bench_main.rs"
harness = false
